--- a/style.css
+++ b/style.css
@@ -32,4 +32,17 @@ hr {
 }
 
 .button {
+  height: 100px;
+  width: 100px;
+  padding: 10px;
+  border-radius: 10%;
+  background-color: green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.2s;
+}
+
+.button:hover {
+  box-shadow: 1px 1px 10px black;
 }
