--- a/style.css
+++ b/style.css
@@ -56,4 +56,11 @@ hr {
 
 .result-tab {
   margin-top: 120px;
+  display: flex;
+  justify-content: center;
+  justify-content: space-evenly;
+}
+
+.score-tab{
+  text-align: center;
 }
