--- a/style.css
+++ b/style.css
@@ -64,3 +64,12 @@ hr {
 .score-tab{
   text-align: center;
 }
+
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
