--- a/style.css
+++ b/style.css
@@ -45,8 +45,8 @@ hr {
 }
 
 .button {
-  height: 100px;
-  width: 100px;
+  height: 120px;
+  width: 120px;
   padding: 10px;
   border-radius: 10%;
   background-color: green;
@@ -112,6 +112,11 @@ hr {
   display: none;
   justify-content: center;
   align-items: center;
+  transition: 0.2s;
+}
+
+.play-again:hover{
+  box-shadow: 1px 1px 10px black;
 }
 
 .unclickable{
