--- a/style.css
+++ b/style.css
@@ -86,20 +86,20 @@ hr {
 }
 
 .green-glow{
-  background-color: green;
-  box-shadow: 1px 1px 10px green;
+  background-color: #00c853;
+  box-shadow: 1px 1px 10px #00c853;
   transition: 0.2s;
 }
 
 .red-glow{
-  background-color: red;
-  box-shadow: 1px 1px 10px red;
+  background-color: #d50000;
+  box-shadow: 1px 1px 10px #d50000;
   transition: 0.2s;
 }
 
 .blue-glow{
-  background-color: blue;
-  box-shadow: 1px 1px 10px blue;
+  background-color: #2962ff;
+  box-shadow: 1px 1px 10px #2962ff;
   transition: 0.2s;
 }
 
@@ -119,7 +119,7 @@ hr {
   height: 80px;
   padding: 10px;
   border-radius: 5%;
-  background-color: green;
+  background-color: #aeea00;
   display: none;
   justify-content: center;
   align-items: center;
@@ -127,7 +127,7 @@ hr {
 }
 
 .play-again:hover{
-  box-shadow: 1px 1px 10px black;
+  box-shadow: 1px 1px 10px #aeea00;
 }
 
 .unclickable{
