--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
   align-items: center;
   padding: 30px;
   border-radius: 25px;
-  box-shadow: 1px 1px 10px black;
+  box-shadow: 00px 0px 20px rgb(175, 146, 146);
 }
 
 h1 {
@@ -58,7 +58,7 @@ hr {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: 0.2s;
+  transition: 0.4s;
 }
 
 .button:hover {
