made a breakpoint for devices under 460px width

--- a/style.css
+++ b/style.css
@@ -136,3 +136,11 @@ hr {
 .unclickable{
   pointer-events: none;
 }
+
+@media only screen and (max-width: 460px){
+  .button{
+    height: 80px;
+    width: 80px;
+    font-size: 20px;
+  }
+}
